Use diamonds
- Use valueOf()
- Remove redundant parentheses